Varargs working